removed overlapping effect on homescreen navbar, fixed bug where screen_beauty was smaller if screen was not scrolled after news section

--- a/_sass/blog/_default.scss
+++ b/_sass/blog/_default.scss
@@ -173,9 +173,9 @@
     z-index: 2;
     &.stuck {
       position: fixed;
-      top: 60px;
+      top: 70px;
       @include media-query($xtra-small) {
-        top: 65px
+        top: 75px
       }
     }
     @include media-query($medium) {
